<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="30dp"
        app:cardElevation="20dp"
        android:layout_height="350dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/otp_label"
                android:textColor="@color/normal_text"
                android:textSize="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/otp_label2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phoneNumberText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/mobile_num"
                android:textSize="18sp"
                tools:text="+91 9674589632" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/phoneNumberText"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/Edit"
                android:textAlignment="center"
                android:textColor="@color/hyperlink"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="180dp"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/otpET1"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:clickable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/otpET2"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:inputType="number"
                    android:clickable="false"

                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/otpET3"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:clickable="false"

                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/otpET4"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:inputType="number"
                    android:clickable="false"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/otpET5"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:clickable="false"

                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/otpET6"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:inputType="number"
                    android:clickable="false"
                    android:maxLength="1"
                    android:gravity="center"
                    android:textSize="20sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/otp_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="270dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonbg2"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>